--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
                 <nav class="nav">
                     <a class="nav__link" href="#">About</a>
                     <a class="nav__link" href="#">Service</a>
+                    <a class="nav__link" href="#">Team</a>
                     <a class="nav__link" href="#">Work</a>
                     <a class="nav__link" href="#">Blog</a>
-                    <a class="nav__link" href="#">Contact</a>
-                    <a class="nav__link" href="#"><i class="fas fa-shopping-cart"></i></a>
-                    <a class="nav__link" href="#"><i class="fas fa-search"></i></a>
+                    <a class="nav__link" href="#">Contacts</a>
                 </nav>
 
                 <button class="nav-toggle" type="button">
@@ -55,7 +54,7 @@
         </div>
 
         <!--Section-->
-        <section class="section">
+        <section class="section" id="about">
             <div class="container">
 
                 <div class="section__header">
@@ -142,7 +141,7 @@
 
         <!--services-->
 
-        <section class="section">
+        <section class="section" id="service">
             <div class="container">
 
                 <div class="section__header">
@@ -218,7 +217,7 @@
         <section class="section">
             <div class="container">
 
-                <div class="section__header">
+                <div class="section__header" id="learn-more">
                     <h3 class="section__suptitle">Service</h3>
                     <h2 class="section__title">what we do</h2>
                     <div class="section__text">
@@ -324,7 +323,7 @@
 
 
         <!--Team-->
-        <section class="section">
+        <section class="section" id="team">
             <div class="container">
 
                 <div class="section__header">
@@ -428,7 +427,7 @@
 
         <!--Works-->
 
-        <section class="section section--works">
+        <section class="section section--works" id="work">
             <div class="container">
 
                 <div class="section__header">
@@ -559,7 +558,7 @@
 
         <!--Blog-->
 
-        <section class="section">
+        <section class="section" id="blog">
             <div class="container">
 
                 <div class="section__header">
@@ -572,11 +571,12 @@
                         <div class="blog__header">
                             <a href=""><img class="blog__photo" src="./assets/img/blog/1.jpg" alt=""></a>
                             <div class="blog__date">
-                                <div class="blog__date-day">15</div>Jan
+                                <div class="blog__date-day">15</div>Oct
                             </div>
                         </div>
                         <div class="blog__content">
-                            <div class="blog__title"><a href="">Lorem ipsum dolor sit amet</a></div>
+                            <div class="blog__title"><a href="https://www.livejournal.com/" target="_blank">Lorem ipsum
+                                    dolor sit amet</a></div>
                             <div class="blog__text">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                                 labore et dolore magna aliqua.</div>
                         </div>
@@ -592,11 +592,12 @@
                         <div class="blog__header">
                             <a href=""><img class="blog__photo" src="./assets/img/blog/2.jpg" alt=""></a>
                             <div class="blog__date">
-                                <div class="blog__date-day">14</div>Jan
+                                <div class="blog__date-day">14</div>Oct
                             </div>
                         </div>
                         <div class="blog__content">
-                            <div class="blog__title"><a href="">sed do eiusmod tempor</a></div>
+                            <div class="blog__title"><a href="https://www.livejournal.com/" target="_blank">sed do
+                                    eiusmod tempor</a></div>
                             <div class="blog__text">Adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                                 dolore magna aliqua.</div>
                         </div>
@@ -612,11 +613,12 @@
                         <div class="blog__header">
                             <a href=""><img class="blog__photo" src="./assets/img/blog/3.jpg" alt=""></a>
                             <div class="blog__date">
-                                <div class="blog__date-day">12</div>Jan
+                                <div class="blog__date-day">12</div>Oct
                             </div>
                         </div>
                         <div class="blog__content">
-                            <div class="blog__title"><a href="">incididunt ut labore et dolore</a></div>
+                            <div class="blog__title"><a href="https://www.livejournal.com/" target="_blank">incididunt
+                                    ut labore et dolore</a></div>
                             <div class="blog__text">Elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                                 aliqua.</div>
                         </div>
@@ -649,7 +651,7 @@
 
 
         <!--Footer-->
-        <footer class="footer">
+        <footer class="footer" id="footer-contacts">
             <div class="container">
                 <div class="footer__inner">
                     <div class="footer__col footer__col--first">
@@ -660,11 +662,15 @@
                         <div class="footer__social">
                             <div class="footer__social-header"><b>15k</b> followers</div>
                             <div class="footer__social-content">
-                                Follow Us: <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-                                <a href="#" target="_blank"><i class="fab fa-pinterest"></i></a>
-                                <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+                                Follow Us: <a href="https://www.facebook.com/" target="_blank"><i
+                                        class="fab fa-facebook-f"></i></a>
+                                <a href="https://www.instagram.com/" target="_blank"><i
+                                        class="fab fa-instagram"></i></a>
+                                <a href="https://twitter.com/?lang=en" target="_blank"><i
+                                        class="fab fa-twitter"></i></a>
+                                <a href="https://www.pinterest.com/" target="_blank"><i
+                                        class="fab fa-pinterest"></i></a>
+                                <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
                             </div>
                         </div>
 
@@ -682,25 +688,28 @@
                             <div class="blogs__item">
                                 <img class="blogs__img" src="./assets/img/blog/1.jpg" alt="">
                                 <div class="blogs__content">
-                                    <a class="blogs__title" href="#">Lorem ipsum dolor sit amet,
+                                    <a class="blogs__title" href="https://www.livejournal.com/" target="_blank">Lorem
+                                        ipsum dolor sit amet,
                                         consectetur adipiscing</a>
-                                    <div class="blogs__date">Jan 15, 2020</div>
+                                    <div class="blogs__date">Oct 15, 2022</div>
                                 </div>
                             </div>
 
                             <div class="blogs__item">
                                 <img class="blogs__img" src="./assets/img/blog/2.jpg" alt="">
                                 <div class="blogs__content">
-                                    <a class="blogs__title" href="#">sed do eiusmod tempor</a>
-                                    <div class="blogs__date">Jan 14, 2020</div>
+                                    <a class="blogs__title" href="https://www.livejournal.com/" target="_blank">sed do
+                                        eiusmod tempor</a>
+                                    <div class="blogs__date">Oct 14, 2022</div>
                                 </div>
                             </div>
 
                             <div class="blogs__item">
                                 <img class="blogs__img" src="./assets/img/blog/3.jpg" alt="">
                                 <div class="blogs__content">
-                                    <a class="blogs__title" href="#">incididunt ut labore et dolore</a>
-                                    <div class="blogs__date">Jan 12, 2020</div>
+                                    <a class="blogs__title" href="https://www.livejournal.com/"
+                                        target="_blank">incididunt ut labore et dolore</a>
+                                    <div class="blogs__date">Oct 12, 2022</div>
                                 </div>
                             </div>
 
@@ -716,33 +725,33 @@
                     <div class="footer__col footer__col--third">
                         <div class="footer__title">Instagram</div>
                         <div class="insta">
-                            <a href="#" target="_blank" class="insta__item">
+                            <a href="https://www.instagram.com/" target="_blank" class="insta__item">
                                 <img src="./assets/img/insta/1.jpg" alt="">
                             </a>
-                            <a href="#" target="_blank" class="insta__item">
+                            <a href="https://www.instagram.com/" target="_blank" class="insta__item">
                                 <img src="./assets/img/insta/2.jpg" alt="">
                             </a>
-                            <a href="#" target="_blank" class="insta__item">
+                            <a href="https://www.instagram.com/" target="_blank" class="insta__item">
                                 <img src="./assets/img/insta/3.jpg" alt="">
                             </a>
 
-                            <a href="#" target="_blank" class="insta__item">
+                            <a href="https://www.instagram.com/" target="_blank" class="insta__item">
                                 <img src="./assets/img/insta/4.jpg" alt="">
                             </a>
-                            <a href="#" target="_blank" class="insta__item">
+                            <a href="https://www.instagram.com/" target="_blank" class="insta__item">
                                 <img src="./assets/img/insta/5.jpg" alt="">
                             </a>
-                            <a href="#" target="_blank" class="insta__item">
+                            <a href="https://www.instagram.com/" target="_blank" class="insta__item">
                                 <img src="./assets/img/insta/6.jpg" alt="">
                             </a>
 
-                            <a href="#" target="_blank" class="insta__item">
+                            <a href="https://www.instagram.com/" target="_blank" class="insta__item">
                                 <img src="./assets/img/insta/7.jpg" alt="">
                             </a>
-                            <a href="#" target="_blank" class="insta__item">
+                            <a href="https://www.instagram.com/" target="_blank" class="insta__item">
                                 <img src="./assets/img/insta/8.jpg" alt="">
                             </a>
-                            <a href="#" target="_blank" class="insta__item">
+                            <a href="https://www.instagram.com/" target="_blank" class="insta__item">
                                 <img src="./assets/img/insta/9.jpg" alt="">
                             </a>
                         </div>
