Update accordion module and styles, add .gitignore

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/style.css">
-    <script src="https://kit.fontawesome.com/1abdb6daa4.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/3ccd2fe46d.js" crossorigin="anonymous"></script>
     <title>Mogo</title>
 </head>
 
@@ -686,7 +686,7 @@
                         <div class="footer__title">Blogs</div>
                         <div class="blogs">
                             <div class="blogs__item">
-                                <img class="blogs__img" src="./assets/img/blog/1.jpg" alt="">
+                                <a href="https://www.livejournal.com/" target="_blank"><img class="blogs__img" src="./assets/img/blog/1.jpg" alt=""></a>
                                 <div class="blogs__content">
                                     <a class="blogs__title" href="https://www.livejournal.com/" target="_blank">Lorem
                                         ipsum dolor sit amet,
@@ -696,7 +696,7 @@
                             </div>
 
                             <div class="blogs__item">
-                                <img class="blogs__img" src="./assets/img/blog/2.jpg" alt="">
+                                <a href="https://www.livejournal.com/" target="_blank"><img class="blogs__img" src="./assets/img/blog/2.jpg" alt=""></a>
                                 <div class="blogs__content">
                                     <a class="blogs__title" href="https://www.livejournal.com/" target="_blank">sed do
                                         eiusmod tempor</a>
@@ -705,7 +705,7 @@
                             </div>
 
                             <div class="blogs__item">
-                                <img class="blogs__img" src="./assets/img/blog/3.jpg" alt="">
+                                <a href="https://www.livejournal.com/" target="_blank"><img class="blogs__img" src="./assets/img/blog/3.jpg" alt=""></a>
                                 <div class="blogs__content">
                                     <a class="blogs__title" href="https://www.livejournal.com/"
                                         target="_blank">incididunt ut labore et dolore</a>
